Fix missing maketitle in two-column PDF

--- a/morisse-whitelam-twocol.tex
+++ b/morisse-whitelam-twocol.tex
@@ -35,6 +35,8 @@ CMOS p-bits biased at threshold naturally implement these dynamics, and the loca
 We present a hardware blueprint establishing a route toward trainable thermodynamic neural computers.
 \end{abstract}
 
+\maketitle
+
 \section{Introduction}
 
 Modern machine learning systems rely on the numerical simulation of dynamical processes.
